Fix SFU logo on Safari

--- a/src/less/_clf-base.less
+++ b/src/less/_clf-base.less
@@ -217,7 +217,7 @@ header fieldset {
 .branding {
     width: 300px;
     height: 46px;
-    background: transparent url(/images/sfu-logo.png) top left no-repeat;
+    background: transparent url(/images/sfu-logo@2x.png) top left no-repeat;
     background-size: contain;
 }
 
